# victus-control

./: .gitignore  99-hp-wmi-permissions.rules  INSTALL.md  README.md  apply-fix.sh  install.sh  meson.build  victus-control-sudoers  victus-fan-sudoers
backend/: meson.build  victus-backend.service  victus-control.rules  victus-control.tmpfiles  victus-healthcheck.service  victus-healthcheck.sh
backend/src/: fan.cpp  fan.hpp  handler.cpp  handler.hpp  keyboard.cpp  keyboard.hpp  main.cpp  set-fan-speed.sh  util.cpp  util.hpp
frontend/: meson.build  victus-control.desktop
frontend/src/: about.cpp  about.hpp  driver.cpp  driver.hpp  fan.cpp  fan.hpp  keyboard.cpp  keyboard.hpp  main.cpp  main.hpp  socket.cpp  socket.hpp
